<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MonteCarlo</string>
    <string name="number_cycles">Enter the number of cycles: </string>
    <string name="enter_here">Enter Here </string>
    <string name="go">Go</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="pi_approx">&#928; &#8776;</string>

</resources>
